--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,67 +2,14 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-#titulo, #perfilPequeño {
+#titulo{
   cursor: pointer;
-}
-
-
-.navbar {
-  background-color:#dddddd !important;
-  background-image: none;
-  background-repeat: no-repeat;
- }
-
-#parte4{
-	background-color: rgb(238, 238, 238);
-}
-#img1{
-	width: auto;
-	height: 300px;
 }
 #foot {		
  	padding: 0px;	
@@ -75,24 +22,6 @@ tr:nth-child(even) {
 }
 #foot a:hover {
   color: white;
-}
-
-.column {
-  float: left;
-  width: 33.3%;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-}
-
-#parte2{
-	background-color: rgb(238, 238, 238);
-}
-#img2{
-	height: 280px;
-}
-div[my-text2*=try]{
-	padding-top: 10px;
-	color: rgb(102, 119, 136);
 }
 
 /* Clear floats after the columns */
