--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,6 +30,9 @@ th{
   padding: 10px;
   transition: all .5s ease;
 }
+.navbar, .dropdown-menu{
+  background-color: rgba(209, 203, 171, 0.9) !important;
+}
 #foot a:hover {
   color: white;
 }
